tests/invalid/SetEmpty_Invalid_2.whiley

function f({int} xs) -> bool
requires xs != {}:
    return true

method main():
    f({1, 4})
    f({})
